--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "server": "json-server -p3001 --watch db.json"
   },
+  "proxy": "https://localhost:3001",
   "dependencies": {
     "axios": "^1.3.3",
     "react": "^18.2.0",
